crates/test-ui/ui/msg_send_alloc_init_different.stderr
error[E0277]: the trait bound `Allocated<NSObject>: MessageReceiver` is not satisfied
 --> ui/msg_send_alloc_init_different.rs
  |
  |     let _: Retained<AnyObject> = unsafe { msg_send![obj, init] };
  |                                           ^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Allocated<NSObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::RetainSemantics<Allocated<NSObject>, Retained<AnyObject>, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::MsgSend<Allocated<NSObject>, Retained<AnyObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<AnyObject>: Encode` is not satisfied
 --> ui/msg_send_alloc_init_different.rs
  |
  |     let _: Retained<AnyObject> = unsafe { msg_send![obj, init] };
  |                                           ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<AnyObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<AnyObject>` to implement `EncodeReturn`
  = note: required for `Retained<AnyObject>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<3>>`
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::RetainSemantics<Allocated<NSObject>, Retained<AnyObject>, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<3>` to implement `objc2::__macros::MsgSend<Allocated<NSObject>, Retained<AnyObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
